updating favicon, preview image, text, and some styling bug on firefox (#430)

--- a/backend/public/stylesheets/main.css
+++ b/backend/public/stylesheets/main.css
@@ -62,7 +62,8 @@ section {
 }
 .text-seperator {
   font-weight: 500;
-  font-size: -webkit-xxx-large
+  font-size: -webkit-xxx-large !important;
+  font-size: xx-large;
 }
 
 .splash .left-container {
